# yamlrpc

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  skel.cpp  stub.cpp  vcpkg.json.in  yamlrpc.h
test/: CMakeLists.txt  inproctests-stub.cpp  inproctests.cpp  inproctests.h  zmqclient.cpp  zmqserver.cpp  zmqtransport.h
